--- a/public/index.html
+++ b/public/index.html
@@ -229,7 +229,7 @@ async function startExam() {
   const key = document.getElementById("key").value;
   showExplanation = document.getElementById("explain").checked;
 
-  const res = await fetch("http://localhost:3000/api/exam", {
+  const res = await fetch("/api/exam", {
     method: "POST",
     headers: {
       "Content-Type": "application/json"
